bk_ida/gccida/g0/dump_regset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4599:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+28h] [rbp-18h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4599:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4599:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+28h] [rbp-18h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4600:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+30h] [rbp-10h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4600:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4600:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+30h] [rbp-10h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4608:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4612:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4616:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4618:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4618:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4619:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4623:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4625:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4626:37: error: invalid suffix 'xnum_' on integer constant
i = ( ( 2 * ptr_->indx + *(short *)0xnum_) << 6) + bit_num_; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4627:16: error: use of undeclared identifier 'off_775F97'
fprintf( outf, off_775F97, ( unsigned int)i); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4630:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4637:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/flow.c:4639:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regset/src/obj/flow.o] Error 1
